Pass the region from the parameter store to the fleetshard sync

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -33,7 +33,7 @@ fleetshardSync:
     securityGroup: ""
     performanceInsights: true
   aws:
-    region: "us-east-1"
+    region: "us-east-1"  # TODO(2023-05-01): Remove the default value here as we now set it explicitly
     roleARN: ""
   telemetry:
     storage:
