--- a/.github/workflows/deploy-data-plane.yaml
+++ b/.github/workflows/deploy-data-plane.yaml
@@ -54,6 +54,7 @@ jobs:
         working-directory: ./dp-terraform/helm/rhacs-terraform
         run: |
           set -euo pipefail
+          # shellcheck disable=SC2043
           for cluster in ${{ inputs.deploy_clusters }}
           do
             echo "Running script terraform_cluster.sh on ${cluster}"
