--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   call-deploy-workflow:
     uses: ./.github/workflows/deploy-data-plane.yaml
+    secrets: inherit # pragma: allowlist secret
     with:
       acs_environment: dev
       github_environment: development
