correct dev cluster name

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -17,6 +17,6 @@ jobs:
     with:
       acs_environment: dev
       github_environment: development
-      deploy_clusters: "acs-fake-01"
-      probe_cluster: "acs-fake-01"
+      deploy_clusters: "acs-dev-dp-01"
+      probe_cluster: "acs-dev-dp-01"
       dry_run: true
