--- a/.openshift-ci/e2e-runtime/Dockerfile
+++ b/.openshift-ci/e2e-runtime/Dockerfile
@@ -1,7 +1,7 @@
 FROM quay.io/centos/centos:stream9
 
 # Workaround for https://bugzilla.redhat.com/show_bug.cgi?id=2184640
-rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
+RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
 
 RUN dnf update -y --disablerepo=\* --enablerepo=baseos,appstream && dnf -y install make which git gettext jq gcc && dnf clean all && rm -rf /var/cache/dnf
 
