--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,14 @@ repos:
         entry: make code/check
         language: system
         pass_filenames: false
+  - repo: local
+    hooks:
+      - id: actionlint
+        name: lint GitHub Actions workflow files
+        description: Runs actionlint to lint GitHub Actions workflow files
+        entry: actionlint
+        language: golang
+        # This dependency can't be updated with 'pre-commit autoupdate'. Please bump it manually when necessary.
+        additional_dependencies: [github.com/rhysd/actionlint/cmd/actionlint@v1.6.24]
+        types: [ "yaml" ]
+        files: "^.github/workflows/"
