--- a/.github/workflows/rds.yaml
+++ b/.github/workflows/rds.yaml
@@ -37,7 +37,7 @@ jobs:
   verify-test:
     name: "Test RDS Provisioning"
     runs-on: ubuntu-latest
-    if: github.repository == 'stackrox/acs-fleet-manager' # do not run in forks
+    if: ${{ !github.event.pull_request.head.repo.fork }} # do not run for PRs from forks
     permissions:
       id-token: write
       contents: read
