ROX-13092: fix eventrouter templates

--- a/dp-terraform/helm/rhacs-terraform/charts/logging/templates/02-eventrouter-01-rbac.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/logging/templates/02-eventrouter-01-rbac.yaml
@@ -22,6 +22,6 @@ subjects:
   name: eventrouter
   namespace: openshift-logging
 roleRef:
-  aoiGroup: rbac.authorization.k8s.io
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: event-reader
