--- a/dp-terraform/helm/rhacs-terraform/charts/logging/templates/02-eventrouter-03-deployment.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/logging/templates/02-eventrouter-03-deployment.yaml
@@ -10,9 +10,10 @@ metadata:
 spec:
   replicas: 1
   selector:
-    component: "eventrouter"
-    logging-infra: "eventrouter"
-    provider: "openshift"
+    matchLabels:
+      component: "eventrouter"
+      logging-infra: "eventrouter"
+      provider: "openshift"
   template:
     metadata:
       labels:
