select app-sre-prod-04 cluster

--- a/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
@@ -35,7 +35,7 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": 45902,
+      "id": 48034,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -983,7 +983,7 @@ data:
         "list": [
           {
             "current": {
-              "selected": false,
+              "selected": true,
               "text": "app-sre-prod-04-prometheus",
               "value": "app-sre-prod-04-prometheus"
             },
