--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -5,4 +5,5 @@
 operator:
   # TODO: Split image into registry and image name + tag
   image: quay.io/rhacs-eng/stackrox-operator:3.74.0
+  tag: 3.74.0
   # TODO: and values for resource limits and requests for both proxy and manager container
