--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -2,8 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-operator:
-  # TODO: Split image into registry and image name + tag
-  image: quay.io/rhacs-eng/stackrox-operator:3.74.0
+operatorImage:
+  repository: quay.io/rhacs-eng/stackrox-operator
   tag: 3.74.0
   # TODO: and values for resource limits and requests for both proxy and manager container
