--- a/fleetshard/pkg/central/charts/testdata/test-chart/templates/dummy.yaml
+++ b/fleetshard/pkg/central/charts/testdata/test-chart/templates/dummy.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: Service
+kind: Deployment
 metadata:
   name: dummy
   labels:
     foo: {{ .Values.foo }}
 spec:
-  podSelector: {}
+  replicas: 1
