--- a/deploy/helm/probe/values.yaml
+++ b/deploy/helm/probe/values.yaml
@@ -3,6 +3,7 @@ namespace: "rhacs-probe"
 fleetManagerEndpoint: ""
 clusterName: ""
 environment: ""
+dataPlaneRegion: "us-east-1"
 # Must be either 'RHSSO' or 'OCM'.
 authType: "RHSSO"
 ocm:
