--- a/.github/workflows/deploy-data-plane.yaml
+++ b/.github/workflows/deploy-data-plane.yaml
@@ -96,6 +96,9 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github
       - name: Deploy probe on ${{ inputs.probe_cluster }}
         working-directory: ./deploy/helm/probe
+        # The probe requests Central instances located in the region of `probe_cluster`.
+        # As a result, the respective US/EU data plane Prometheus instances contain only
+        # metrics of probe runs related to their region.
         run: |
           set -euo pipefail
           ./deploy.sh ${{ inputs.acs_environment }} ${{ inputs.probe_cluster }}
