--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-operatorImage:
+operator:
   repository: quay.io/rhacs-eng/stackrox-operator
-  tag: 3.74.0
+  tags: []
   # TODO: and values for resource limits and requests for both proxy and manager container
