--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -13,4 +13,4 @@ jobs:
       acs_environment: prod
       github_environment: production
       deploy_clusters: "acs-prod-dp-01 acs-prod-eu-01"
-      probe_cluster: "acs-prod-dp-01 acs-prod-eu-01"
+      probe_clusters: "acs-prod-dp-01 acs-prod-eu-01"
