--- a/dev/env/manifests/rhacs-operator/quay/03-subscription.yaml
+++ b/dev/env/manifests/rhacs-operator/quay/03-subscription.yaml
@@ -4,11 +4,10 @@ metadata:
   name: stackrox-operator-test-subscription
   namespace: "$STACKROX_OPERATOR_NAMESPACE"
 spec:
-  channel: latest
+  channel: $STACKROX_OPERATOR_CHANNEL
   name: rhacs-operator
   source: stackrox-operator-test-index
   sourceNamespace: "$STACKROX_OPERATOR_NAMESPACE"
-  startingCSV: rhacs-operator.v${STACKROX_OPERATOR_VERSION}
   config:
     env:
       # TODO(ROX-7740): Remove these once we have a single dev+CI repo.
