--- a/dev/env/manifests/rhacs-operator/quay/03-subscription.yaml
+++ b/dev/env/manifests/rhacs-operator/quay/03-subscription.yaml
@@ -6,8 +6,10 @@ metadata:
 spec:
   channel: $STACKROX_OPERATOR_CHANNEL
   name: rhacs-operator
+  installPlanApproval: Manual
   source: stackrox-operator-test-index
   sourceNamespace: "$STACKROX_OPERATOR_NAMESPACE"
+  startingCSV: rhacs-operator.v${STACKROX_OPERATOR_VERSION}
   config:
     env:
       # TODO(ROX-7740): Remove these once we have a single dev+CI repo.
