Derive the channel from the stackrox version

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -11,7 +11,7 @@ export CLUSTER_DNS_DEFAULT="cluster.local"
 
 export IMAGE_REGISTRY_DEFAULT="quay.io/rhacs-eng"
 STACKROX_VERSION_TAG="3.74.0" # Note: SCANNER_VERSION_DEFAULT needs to be in sync with this.
-export STACKROX_OPERATOR_CHANNEL_DEFAULT="rhacs-3.74"
+export STACKROX_OPERATOR_CHANNEL_DEFAULT="rhacs-${STACKROX_VERSION_TAG%.*}" # omit the patch version, i.e. set 'rhacs-3.74' for '3.74.0'
 export STACKROX_OPERATOR_VERSION_DEFAULT="${STACKROX_VERSION_TAG}"
 export CENTRAL_VERSION_DEFAULT=$(echo "$STACKROX_VERSION_TAG" | sed -e 's/0-nightly/x-nightly/;')
 export SCANNER_VERSION_DEFAULT="2.28.2" # This one matches the above operator version tag.
