Switch back to automatic install plan

--- a/dev/env/manifests/rhacs-operator/marketplace/03-subscription.yaml
+++ b/dev/env/manifests/rhacs-operator/marketplace/03-subscription.yaml
@@ -6,9 +6,8 @@ metadata:
 spec:
   channel: $STACKROX_OPERATOR_CHANNEL
   name: rhacs-operator
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: rhacs-operator.v${STACKROX_OPERATOR_VERSION}
   config:
     resources: $RHACS_OPERATOR_RESOURCES
