--- a/fleetshard/pkg/central/charts/data/rhacs-operator/templates/rhacs-operator-deployment.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/templates/rhacs-operator-deployment.yaml
@@ -1,5 +1,5 @@
 ## Iterate over operator versions passed by fleet-shard sync
-{{- range $tag := .Values.operator.tags }}
+{{- range .Values.operator.images }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +8,7 @@ metadata:
     control-plane: controller-manager
   ## Name field must contain up to 63 characters
   ## https://www.rfc-editor.org/rfc/rfc1123
-  name: rhacs-operator-controller-manager-{{ $tag | trunc 29 }}
+  name: rhacs-operator-controller-manager-{{ .tag | trunc 10 }}-{{ randAlphaNum 10 | lower }}
   namespace: stackrox-operator
 spec:
   replicas: 1
@@ -80,7 +80,7 @@ spec:
                   containerName: manager
                   resource: limits.memory
                   divisor: '0'
-          image: "{{ $.Values.operator.repository }}:{{ $tag }}"
+          image: "{{ .repository }}:{{ .tag }}"
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
