--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -3,6 +3,13 @@
 # Declare variables to be passed into your templates.
 
 operator:
-  repository: quay.io/rhacs-eng/stackrox-operator
-  tags: []
-  # TODO: and values for resource limits and requests for both proxy and manager container
+  # Each item in images should contain `repository` and `tag` key
+  # example:
+  #   images:
+  #   - repository: quay.io/rhacs-eng/stackrox-operator
+  #     tag: 3.74.0
+  #   - repository: quay.io/rhacs-eng/stackrox-operator
+  #     tag: 3.74.1
+  images: []
+  # TODO: add values for resource limits and requests for both proxy and manager container
+  # TODO: add value for kube-rbac-proxy image
