--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -211,9 +211,9 @@ components:
     ManagedCentralVersions:
       type: object
       properties:
-        central:
+        desiredVersion:
           type: string
-        centralOperator:
+        actualVersion:
           type: string
 
     ManagedCentral:
