add ForceReconcile to central request model and private API

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -240,6 +240,8 @@ components:
                       type: string
                     mas/placementId:
                       type: string
+                    forceReconcile:
+                      type: boolean
                 deletionTimestamp:
                   type: string
             spec:
