--- a/openapi/fleet-manager-private-admin.yaml
+++ b/openapi/fleet-manager-private-admin.yaml
@@ -438,6 +438,8 @@ components:
               $ref: "fleet-manager.yaml#/components/schemas/CentralSpec"
             scanner:
               $ref: "fleet-manager.yaml#/components/schemas/ScannerSpec"
+            force_reconcile:
+              type: boolean
     CentralList:
       allOf:
         - $ref: "fleet-manager.yaml#/components/schemas/List"
@@ -461,6 +463,8 @@ components:
           $ref: "fleet-manager.yaml#/components/schemas/CentralSpec"
         scanner:
           $ref: "fleet-manager.yaml#/components/schemas/ScannerSpec"
+        force_reconcile:
+          type: boolean
 
     CentralDefaultVersion:
       type: object
