--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -1,4 +1,4 @@
-## TODO disable operator installation when FSS runs with FEATURE_FLAG_UPGRADE_OPERATOR_ENABLED=true
+## TODO ROX-16646: drop acs-operator.yaml template
 {{- if .Values.acsOperator.enabled }}
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
