Revert "use stable subscription channel for operator (#982)"
This reverts commit 0ada0754ca86a5dfc44763977d0c7b405005f878.

--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -11,7 +11,7 @@ metadata:
   name: rhacs-operator
   namespace: {{ .Release.Namespace }}
 spec:
-  channel: stable
+  channel: latest
   installPlanApproval: Manual
   name: rhacs-operator
   source: {{ .Values.acsOperator.source }}
