--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -1,4 +1,4 @@
-## TODO ROX-16646: drop acs-operator.yaml template
+## TODO(ROX-16646): drop acs-operator.yaml template
 {{- if .Values.acsOperator.enabled }}
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
