ROX-15981: add force reconcile flag to central requests (#972)

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -329,6 +329,8 @@ components:
                           $ref: "#/components/schemas/ResourceRequirements"
             requestStatus:
               type: string
+            forceReconcile:
+              type: string
 
     ManagedCentralList:
       description: >-
