ROX-15980 set resource requests and limits to the egress-proxy

--- a/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
@@ -49,6 +49,13 @@ spec:
           mountPath: /etc/squid/squid.conf
           subPath: squid.conf
           readOnly: true
+        resources:
+          limits:
+            cpu: {{ .Values.egressProxy.resources.limits.cpu }}
+            memory: {{ .Values.egressProxy.resources.limits.memory }}
+          requests:
+            cpu: {{ .Values.egressProxy.resources.requests.cpu }}
+            memory: {{ .Values.egressProxy.resources.requests.memory }}
       volumes:
       - name: config-volume
         configMap:
