ROX-16769 add resources for observability operator

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-05-subscription.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-05-subscription.yaml
@@ -12,3 +12,11 @@ spec:
   source: observability-operator-manifests
   sourceNamespace: {{ include "observability.namespace" . }}
   startingCSV: observability-operator.{{ .Values.observabilityOperatorVersion }}
+  config:
+    resources:
+      requests:
+        cpu: {{ .Values.observabilityOperator.resources.requests.cpu | quote }}
+        memory: {{ .Values.observabilityOperator.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.observabilityOperator.resources.limits.cpu | quote }}
+        memory: {{ .Values.observabilityOperator.resources.limits.memory | quote }}
