--- a/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
@@ -35,3 +35,12 @@ pagerduty:
 deadMansSwitch:
   # Webhook URL of the dead man's switch provider.
   url: ""
+
+observabilityOperator:
+  resources:
+    requests:
+      cpu: "500m"
+      memory: "2048Mi"
+    limits:
+      cpu: "500m"
+      memory: "2048Mi"
