change final snapshot test code to use dbclustersnapshot instead of dbsnapshot

--- a/.github/workflows/rds.yaml
+++ b/.github/workflows/rds.yaml
@@ -32,6 +32,7 @@ on:
       - 'docs/**'
       - 'pkg/api/openapi/docs/**'
       - 'pkg/api/openapi/.openapi-generator-ignore'
+      - 'dp-terraform/**'
 
 jobs:
   verify-test:
