--- a/fleetshard/pkg/central/charts/data/rhacs-operator/templates/rhacs-operator-deployment.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/templates/rhacs-operator-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     control-plane: controller-manager
   ## Name field must contain up to 63 characters
   ## https://www.rfc-editor.org/rfc/rfc1123
-  name: {{ $.Values.operator.deploymentPrefix | lower }}-{{ .tag | lower }}
+  name: {{ $.Values.operator.deploymentPrefix | lower }}{{ .tag | lower }}
   namespace: stackrox-operator
 spec:
   replicas: 1
